fix: Remove map overflow issue at the review page

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -40,6 +40,10 @@
   		position: static;
 	}
 
+	.inside footer {
+		z-index: 1001;
+	}
+
 	.inside #maincontent {
 		align-items: stretch;
 		display: flex;
@@ -50,7 +54,7 @@
 
 	.inside #map-container {
 		flex: 2 0 0;
-		height: 100%;
+		height: 65vh;
 		order: 2;
 	}
 
